# Agentic-OS-V3

./: .agent-genome.json  .agentic-os-rules.md  .audit-queue.json  .dockerignore  .env.example  .gitattributes  .gitignore  .lintstagedrc  .loop-state.json  .post-mortems.md  .prettierignore  .strategic-roadmap.json  .tool-registry.json  AGENTIC_OS_PLAN.md  AGENTS.md  APPLY_FIXES_SUMMARY.md  ARCHITECTURE_ANALYSIS.md  BASTION_BUILD_REPORT.md  BASTION_NS_REPORT.md  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMMUNICATION_PROTOCOL.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.standalone  EXECUTIVE_SUMMARY.md  FEATURE_MATRIX.html  FLEET_BRIEF.md  HARDCODED_ENV_AUDIT.md  INTEGRATION_COMPLETE.md  INTEGRATION_PLAN.md  KERNEL_DESIGN.md  MASTER_CONTEXT.md  (+128 more)
.aionr/personas/: atlas-persona.md  forge-persona.md
.claude/: ecc-tools.json  identity.json
.clinerules/workflows/: bmad-bmm-check-implementation-readiness.md  bmad-bmm-create-ux-design.md  bmad-bmm-domain-research.md  bmad-bmm-edit-prd.md  bmad-bmm-market-research.md  bmad-bmm-quick-dev.md  bmad-bmm-technical-research.md  bmad-bmm-validate-prd.md  bmad-brainstorming.md
.codex/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml  validate.yml
.husky/: pre-commit
.kiro/steering/: bmad-bmm-check-implementation-readiness.md  bmad-bmm-create-architecture.md  bmad-bmm-create-epics-and-stories.md  bmad-bmm-create-prd.md  bmad-bmm-create-product-brief.md  bmad-bmm-create-ux-design.md  bmad-bmm-domain-research.md  bmad-bmm-edit-prd.md  bmad-bmm-generate-project-context.md  bmad-bmm-market-research.md  bmad-bmm-quick-dev.md  bmad-bmm-quick-spec.md  bmad-bmm-technical-research.md  bmad-bmm-validate-prd.md  bmad-brainstorming.md  bmad-editorial-review-prose.md  bmad-editorial-review-structure.md  bmad-help.md  bmad-index-docs.md  bmad-party-mode.md  bmad-review-adversarial-general.md  bmad-review-edge-case-hunter.md  bmad-shard-doc.md
.mimocode/: .cron-lock
.mimocode/plans/: 1783414432698-gentle-nebula.md
.rovodev/: prompts.yml
.serena/: project.yml
_bmad-output/: sdk-test.err  server-lint.err
certs/: README.md
crates/: README.md
crates/cli/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: config.rs  engine.rs  lib.rs  provider.rs  skill.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  types.rs
crates/installer/: Cargo.toml
crates/installer/src/: completions.rs  download.rs  extract.rs  installer.rs  lib.rs  self_update.rs  verify.rs
crates/nexus-cli/: Cargo.toml
crates/nexus-cli/src/: api.rs  completion.rs  main.rs  tui.rs
crates/nexus-search/: Cargo.toml
crates/nexus-search/src/: lib.rs
crates/provider-types/: Cargo.toml
crates/provider-types/src/: base.rs  images.rs  json.rs
crates/provider-types/src/canonical/: catalog.rs  name_builder.rs  registry.rs
crates/provider-types/src/formats/: openai_responses.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  api_client.rs  declarative.rs  lib.rs  openai.rs  stream.rs  tokens.rs
crates/safety/: Cargo.toml
crates/safety/src/: checker.rs  injection.rs  jailbreak.rs  lib.rs  pii.rs  profanity.rs  safety_checker.rs
crates/tools/: Cargo.toml
crates/tools/src/: builtin.rs  lib.rs  lifecycle.rs  registry.rs  tool.rs
docs/: A2A_PROTOCOL.md  AGENT_DEV_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  AUDIT_PLAN.md  AUTONOMOUS_OPERATIONS_MANUAL_v4.0.0.md  BASELINE_TEST_FAILURES.md  CONFIG_REFERENCE.md  CONTRIBUTING.md  CONTROL_PLANE_UX_SPEC.md  DEPLOYMENT.md  DEPRECATION_POLICY.md  DR_RUNBOOK.md  ERROR_CODES.md  HERMES.md  MCP.md  OBSERVABILITY_GUIDE.md  PERFECTION_METRICS.md  PERSONA_REGISTRY.md  PHASE11_SENTINEL_SECURITY_AUDIT.md  PHASE11_WORKLIST.md  PLAN_TRACKER.md  PLUGIN_DEV_GUIDE.md  PRODUCTION_CHECKLIST.md  README.md  REDEMPTION_PLAN.md  RUNTIME_LOOP_REFERENCE.md  SECURITY.md  TEAM_OWNERSHIP_GOVERNANCE.md  TESTING.md  configuration-reference.md  env-vars-reference.md  error-codes-reference.md  migration-guide.md  phase-13-orchestration-design.md  skill-registry-design.md  upgrade-notes.md
e2e/: api-console.spec.ts  dashboard.spec.ts  memories.spec.ts
fleet/: ASSIGNMENTS.md  BACKLOG.md  scoreboard.json  verify-gate.ps1
memory/: mem-architecture-proposal.md
nexus-tauri/: package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
nexus-tauri/src-tauri/: Cargo.toml  tauri.conf.json
nexus-tauri/src-tauri/resources/backend/: start-server.cmd  start-server.sh
nexus-tauri/src-tauri/src/: commands.rs  lib.rs  state.rs
scripts/: health-check.sh  profile-system-performance.ts  scan-r1-documentation-claims.ts  test-r1-release-evidence-validator.ts  validate-r1-release-evidence.ts  verify-skills.ts  verify-system-readiness.ts
server/: .env.example  Dockerfile  PERFC_STATUS.md  __chk.cjs  __chk2.cjs  __gen_perf.py  __tsc_err.cjs  _probe.js  _probe.mjs  _probe2.mjs  _probe3.mjs  _probe4.mjs  _probe5.mjs  _probe_status.ts  _tail_block.txt  _verify_logic.mjs  _verify_stub_loader.cjs  agentic-os.db-shm  agentic-os.db-wal  api_test.py  check_audit.js  check_checkpoints.js  check_hashes.js  check_keys.ps1  debug_scope.js  debug_verify.js  docker-compose.yml  drizzle.config.sqlite.ts  drizzle.config.ts  env-config.txt  eslint.config.js  eslint_cereb1.json  eslint_out.txt  eslint_prov.json  eslint_tests.txt  eval_out.txt  find_bad_entries.js  fix_all_entries.js  fix_audit_chain.js  fix_env.py  (+36 more)
shared/: types.ts
skills/: convert_pdf_to_images.py  fill_pdf_form.py  split_pdf.py
src/: App.tsx  index.css  main.tsx  router.tsx  skill-registry.ts  store.test.ts  store.ts
target-rusta/: .rustc_info.json
tests/: skill-registry.test.ts
v3 upgrade/: AGENTIC_OS_V3_100X_UPGRADE_MASTER_PLAN.md  AGENTIC_OS_V3_PERFORMANCE_OPTIMIZATION_CODE_MANUAL.md  expansion-complete-with-code.md  expansion-repo-aligned-implementation-plan.md  repo-deep-audit-and-fix-plan.md
(+2296 files in other folders)
