[workspace]
members = [
    "crates/core",
    "crates/config",
    "crates/installer",
    "crates/safety",
    "crates/cli",
    "crates/provider-types",
    "crates/providers",
    "crates/tools",
    "crates/observability",
    "crates/nexus-search",
    "crates/nexus-cli",
]
# The Tauri desktop shell is a standalone, decoupled system (see ADR-0007) —
exclude it from the Rust crates workspace so it builds independently.
exclude = [
    "nexus-tauri/src-tauri",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Warzonesiddiki"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.46", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "1.0"
toml = "0.8"
toml_edit = "0.22"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.30"
opentelemetry = "0.30"
opentelemetry-otlp = "0.30"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.0"
hyper-util = "0.1"

# MCP Protocol
rmcp = { version = "1.4", default-features = false, features = ["schemars", "auth", "server", "macros"] }

# WebSocket
tokio-tungstenite = "0.26"

# UUID
uuid = { version = "1.16", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"

# Compression
flate2 = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Database
rusqlite = { version = "0.33", features = ["bundled", "serde_json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json"] }
deadpool-redis = { version = "0.18", features = ["rt_tokio_1"] }

# File system
walkdir = "2.5"
dirs = "6.0"
tempfile = "3.19"

# Process
which = "7.0"

# Testing
tokio-test = "0.4"
mockall = "0.13"
assert_cmd = "2.0"
predicates = "3.1"

# Regex
regex = "1.11"

# Unicode
unicode-segmentation = "1.12"
unicode-normalization = "0.1"

# Hash maps
dashmap = "6.1"

# Enum derives
strum = { version = "0.28", features = ["derive"] }

# Lazy init
once_cell = "1.21"

# URLs
url = "2.5"

# OpenAPI
utoipa = { version = "4", features = ["chrono"] }

# Our crates (path deps)
agentic-os-core = { path = "crates/core" }
agentic-os-provider-types = { path = "crates/provider-types" }
