[workspace]
members = [
    "crates/core",
    "crates/config",
    "crates/provider-types",
    "crates/providers",
    "crates/tools",
    "crates/nexus-search",
    "crates/nexus-cli",
]
# The Tauri desktop shell is a standalone, decoupled system (see ADR-0007) —
# exclude it from the Rust crates workspace so it builds independently.
exclude = [
    "nexus-tauri/src-tauri",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Warzonesiddiki"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.46", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.30"
opentelemetry = "0.30"
opentelemetry-otlp = "0.30"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"] }

# MCP Protocol
rmcp = { version = "1.4", default-features = false, features = ["schemars", "auth", "server", "macros"] }

# WebSocket
tokio-tungstenite = "0.26"

# UUID
uuid = { version = "1.16", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# File system
walkdir = "2.5"
tempfile = "3.19"

# Testing
tokio-test = "0.4"

# Regex
regex = "1.11"

# Unicode
unicode-normalization = "0.1"

# Hash maps
dashmap = "6.1"

# Enum derives
strum = { version = "0.28", features = ["derive"] }

# URLs
url = "2.5"

# OpenAPI
utoipa = { version = "4", features = ["chrono"] }

# Our crates (path deps)
agentic-os-core = { path = "crates/core" }
agentic-os-provider-types = { path = "crates/provider-types" }
