[package]
name = "agentic-os-cli"
version = "0.1.0"
edition = "2021"
publish = false

description = "Command-line interface for Agentic OS V4"

[dependencies]
agentic-os-core = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
