[package]
name = "agentic-os-core"
version = "0.1.0"
edition = "2021"
publish = false

description = "Agentic OS V4 Core - Shared types, traits, and error definitions"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
