[package]
name = "agentic-os-provider-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Provider type definitions adapted from Goose (Block)"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
regex = { workspace = true, features = ["unicode"] }
reqwest = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
unicode-normalization = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-stream = { workspace = true }
tokio-test = { workspace = true }
