[package]
name = "agentic-os-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AI Provider clients adapted from Goose (Block)"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
agentic-os-provider-types = { path = "../provider-types" }
reqwest = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
utoipa = { workspace = true }
url = { workspace = true }

[dev-dependencies]
env-lock = "0.1"
tempfile = { workspace = true }
test-case = "3.3"
tokio-stream = { workspace = true }
wiremock = "0.6"



[features]
default = []
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

