[package]
name = "agentic-os-tools"
version = "0.1.0"
edition = "2021"
publish = false
description = "Tool registry and lifecycle management"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
